# cardano-db-sync-compare

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Makefile  README.md  db_comparison.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
benchmarks/: INVESTIGATION-13.6.0.5-vs-13.7.1.0.md  INVESTIGATION-mainnet-lsm-vs-standard.md  INVESTIGATION-pool_relay-old-vs-lsm-mainnet.md  INVESTIGATION-preprod-lsm-vs-standard.md  INVESTIGATION-preview-lsm-vs-standard.md  buckets-vs-bisect-2026-06-05.bisect.json  buckets-vs-bisect-2026-06-05.buckets.json  buckets-vs-bisect-2026-06-05.md  fix-port-vs-regular-preprod-2026-06-06.json  lsm-vs-standard-mainnet-2026-06-06.json  mainnet-full-2026-06-05.ARCHIVED.txt  mainnet-full-2026-06-05.SUMMARY.md  mainnet-full-2026-06-05.json  pool_relay-old-vs-lsm-mainnet-2026-06-06.json  pool_relay-port-overflow-affected-relays.csv
db_sync_comparator/: __init__.py  __main__.py  cli.py  compare.py  db.py  model.py  planning.py  ranges.py  registries.py  report.py  schema.py  sql.py  verify.py
docs/: 00-start-here.md  01-why-compare-two-databases.md  02-the-three-hard-problems.md  03-how-it-works.md  04-what-i-used-and-why.md  05-running-it.md  06-how-each-table-is-compared.md  07-performance-and-scaling.md  08-case-study-pool-relay-port.md  09-extending-and-limitations.md  10-testing.md  11-the-code-end-to-end.md  12-the-generated-sql-annotated.md  README.md
docs/primers/: 01-databases-in-2-minutes.md  02-indexes-and-table-scans.md  03-hashing-and-fingerprints.md  04-cardano-and-dbsync-for-this-tool.md  05-surrogate-ids-sequences-and-drift.md  06-migrations-and-schema-stages.md  07-how-db-sync-loads-fast.md  08-column-types-and-saving-space.md
tests/: conftest.py  test_cli.py  test_fixture_e2e.py  test_integration.py  test_localize_buckets.py  test_natural_keys.py  test_planning.py  test_registries.py  test_report.py  test_sql.py  test_verify.py
